--- a/src/index.css
+++ b/src/index.css
@@ -7,20 +7,22 @@ body {
   -moz-osx-font-smoothing: grayscale;
   /* background-color: #282c34 !important; */
   background-color: #ededed !important;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   -ms-overflow-style: none; /* for Internet Explorer, Edge */
   scrollbar-width: none; /* for Firefox */
-  overflow-y: scroll;
+  /* overflow-y: scroll; */
 }
 
-body root {
-  width: 100%;
-  height: 100%;
+html, body, root {
+    width: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
 }
 
-body::-webkit-scrollbar {
+/* body::-webkit-scrollbar {
   display: none;
-}
+} */
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
